--- a/templates/base.html
+++ b/templates/base.html
@@ -188,5 +188,6 @@
 
     <!--JavaScript at end of body for optimized loading-->
     <script type="text/javascript" src="{% static 'js/materialize.min.js' %}"></script>
+    <script src="https://unpkg.com/htmx.org@1.9.12" integrity="sha384-ujb1lZYygJmzgSwoxRggbCHcjc0rB2XoQrxeTUQyRjrOnlCoYta87iKBWq3EsdM2" crossorigin="anonymous"></script>
 </body>
 </html>
